testsuite/tests/properties/invalid_prop_type/test.out
test.py:13: error: Recursion loop in type inference for property BarCode.prop_1. Try to specify its return type explicitly.

Done
